traces/bug_352.txt
examples++-load/isoline.cpp:320: error: DEAD_STORE
  The value written to &N (type int) is never used.
Showing all 1 steps of the trace


examples++-load/isoline.cpp:320:5: Write of unused value
318.   int  EA_Grid(const KNM_<double> *g, int k,int & e)
319.   {
320.       int N = g->N()-1;
           ^
321.       int kq= k/2; // number of the quad
322.       int k0 = k%2; // up or down
